# Disease_propagation

./: CMakeLists.txt
.github/workflows/: main.yml
